fix: Landscape mode horizontal scroll (#278)
* Add screen in recovery flow temporary commit

* Fix: Landscape mode horizontal scroll

* Fix: Landscape mode horizontal scroll

* fixed gap for iE11

* Took out from this commit

* Also this one took out for PR

* Update print-portal/src/components/views/4-print/Print.vue

--- a/print-portal/src/styles/variables/breakpoins.scss
+++ b/print-portal/src/styles/variables/breakpoins.scss
@@ -4,6 +4,12 @@
         @content;
     }
 }
+@mixin tablet-custom {
+    @media only screen
+    and (max-width: 942px) {
+        @content;
+    }
+}
 
 @mixin mobile-landscape-X {
     @media only screen
